2004-01-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.schemas.in:
	* mahjongg.c: Added new layouts from Rexford Newbould and
	Krzysztof Foltman. Mark the layout names for translation and made
	them more "readable" (i.e. easy->Easy).

2004-01-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (recreate_tile_images): Set the gc for gdk_draw_pixbuf
	to NULL. It was being used, inappropriately for clipping with bad
	results. Fixes bug #131905.

	* drawing.c: Keep the aspect ratio of the tiles constant. Patch
	from Jim Evins (see bug #131957).

2004-01-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (pixmap_DATA): Added new tile sets, smooth.png and
	postmodern.svg.

2004-01-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (board_click): Ignore double click and triple click
	events, we were treating them as single click events and therefore
	were getting duplicates. Fixes bug #130856.

2003-12-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c:	
	* solubility.c (shuffle): Shuffling finally works properly. Rather
	than doing a permutation we re-use the pile-creation routine to
	create a new pile that is guaranteed to me solvable. Undo and redo
	are also properly set. The dependence of solubility.c on string.h
	has also been removed. This fixes bugs 91098 and 94750.

2003-12-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: 
	* solubility.c: Work on the new shuffle algorithm so that
	it produces solvable results (if possible).

2003-12-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (draw_all_tiles): Fix a drawing error when shuffling
	the tiles.

	* mahjongg.c (check_free): Add a shuffle option to the "no more
	moves dialog".

2003-11-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: That reference to bg_DATA shouldn't have been
	there. Thanks Steve.

2003-10-29  Callum McKenzie  <callum@physics.otago.ac.nz>
