@@ -1,3 +1,8 @@
+2004-01-28  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* mahjongg.c (shuffle_tiles_callback): Apllied patch from Richard
+	Hoelscher to clear the selection before shuffling. Bug #131199.
+
 2004-01-26  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* mahjongg.schemas.in:
